# tameshiwari

./: .gitignore  CMakeLists.txt  README.md  package.xml
bindings/python/: CMakeLists.txt  pynocchio_casadi.cpp
include/tameshiwari/: talker.h
matlab/: angular_velocity_contribution_test.m  centauro_evaluation.m  centauro_evaluation_chop.m  centauro_evaluation_punch.m  colorcycle.m  evaluation.m  figure1.tex  figure2.tex  force_test.m  fullrank.m  myfigure.tex  myfile.tex  pendulum_evaluation.m  pendulum_evaluation.m~  regularization_test.m  tikzit_test.m
python/: my_python_script.py  pendulum_casadi_single_shooting.py
python/OCP_centauro_7dof_arm/: centauro_inverse_kinematics.py  centauro_max_momentum_2dof.py  centauro_max_momentum_3dof.py  centauro_max_momentum_3dof_v2.py  centauro_max_momentum_6dof_v1.py  centauro_max_momentum_6dof_v2.py  centauro_max_momentum_6dof_v3.py  centauro_max_momentum_6dof_v4.py  centauro_max_momentum_7dof_final.py  centauro_max_momentum_7dof_v1.py  centauro_max_velocity_3dof.py  centauro_urdf_2dof.py
python/OCP_pendulum_1dof_r/: pendulum_casadi_collocation.py  pendulum_casadi_multiple_shooting.py  pendulum_casadi_single_shooting.py  results_collocation.mat  results_multiple_shooting.mat  results_single_shooting.mat
python/OCP_pendulum_2dof_rp/: rp_robot_casadi_multiple_shooting.py  rp_robot_casadi_single_shooting.py
python/OCP_pendulum_2dof_rr/: rr_robot_casadi_multiple_shooting.py  rr_robot_max_momentum.py  rr_robot_max_momentum_multi_stage.py  rr_robot_min_time.py  (+10 more)
src/: casadi_pinocchio_bridge.hpp  talker.cpp  talker_main.cpp
(+129 files in other folders)
